--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
 
     compile "io.reactivex.rxjava2:rxjava:$rx_java"
     compile "io.reactivex.rxjava2:rxandroid:$rx_android"
+
+    compile "com.github.bumptech.glide:glide:$glide"
 }
 buildscript {
     ext.kotlin_version = '1.1.2-3'
@@ -56,6 +58,7 @@ buildscript {
     ext.smack = '4.2.0'
     ext.rx_java = '2.1.0'
     ext.rx_android = '2.0.1'
+    ext.glide = '3.7.0'
 
     repositories {
         jcenter()
