--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.lolchat.myanmarking.myanchat" >
-    <uses-permission android:name="android.permission.INTERNET"/>
+    package="com.lolchat.myanmarking.myanchat">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".MyApp"
@@ -13,18 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <service android:name=".network.xmpp.RiotXmppService"/>
+        <service android:name=".network.xmpp.RiotXmppService" />
 
         <activity
             android:name=".ui.activity.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme" />
-
-        <activity
-            android:name=".ui.activity.EntryActivity"
-            android:label="@string/app_name"
-            android:noHistory="true"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme.Entry">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
