--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:3.0.1'
+    }
 }
 
 dependencies {
@@ -38,8 +42,9 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.anko:anko-sdk23:$anko_version"
 
-    compile 'com.google.dagger:dagger:2.10'
-    kapt 'com.google.dagger:dagger-compiler:2.10'
+    compile 'com.google.dagger:dagger:2.11'
+    compile 'com.google.dagger:dagger-android-support:2.11'
+    kapt 'com.google.dagger:dagger-compiler:2.11'
 
     compile "org.igniterealtime.smack:smack-android:$smack"
     compile "org.igniterealtime.smack:smack-tcp:$smack"
@@ -72,7 +77,7 @@ dependencies {
 
 buildscript {
     ext{
-        kotlin_version = '1.1.2-3'
+        kotlin_version = '1.1.3'
         support_library_version = '25.3.1'
         anko_version = '0.9'
         constraint_layout = '1.0.2'
